clean code and upgrade base library